dev-ops-Data-monitoring-engine/k8s/app/monitoring-prefix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-prefix-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: ca-cluster-issuer
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - localhost
      secretName: monitoring-prefix-tls                  # ← cert stored here

  rules:
    - host: localhost
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000

          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
